force-app/main/default/objects/EC_Invoice__c/EC_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoice</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>