force-app/main/default/objects/EC_Invoice__c/fields/EC_Amount__c.field-meta.xml
<CustomField>
    <fullName>EC_Amount__c</fullName>
    <description>Amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>