force-app/main/default/objects/EC_Invoice__c/fields/EC_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>EC_Invoice_Date__c</fullName>
    <description>Invoice Date</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>