force-app/main/default/objects/EC_Invoice__c/fields/EC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EC_Opportunity__c</fullName>
    <description>Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>